# resume-parser-framework

./: .env.example  .gitignore  LICENSE  Makefile  README.md  parse_resumes.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: usage_example.py
samples/: jane_doe_resume.docx
scripts/: create_sample_resumes.py
src/resume_parser/: __init__.py  coordinator.py  framework.py
src/resume_parser/extractors/: __init__.py  base.py  email_extractor.py  name_extractor.py  skills_extractor.py  spacy_name_extractor.py
src/resume_parser/llm/: __init__.py  gemini_client.py
src/resume_parser/models/: __init__.py  resume_data.py
src/resume_parser/parsers/: __init__.py  base.py  pdf_parser.py  word_parser.py
tests/: conftest.py  sample_data.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_coordinator.py  test_extractors.py  test_framework.py  test_parsers.py  test_resume_data.py  test_spacy_extractor.py
